# grobot

./: Cargo.toml  README.md  start.sh
configs/: default.toml
docs/: BOARD.md  HARDWARE.md  MATERIALS.md  REFERENCE.md  SOFTWARE.md
src/: lib.rs  main.rs
tests/: test-light.sh  test-mist.sh  test_config.rs
