[package]
name = "grobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
dht22_pi = "1.0.0"
ringbuffer = "0.13.0"
rppal = "0.14.1"
serde = { version = "1.0.160", features = ["derive", "serde_derive"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
